--- a/tutorial/html/learner/index.html
+++ b/tutorial/html/learner/index.html
@@ -225,10 +225,34 @@ In the constructor you can do the following things:</p>
 </ul>
 <pre class="prettyprint well"><code class="r"># classifier, set it up for prediction probabilities
 lrn = makeLearner(&quot;classif.rpart&quot;, predict.type = &quot;prob&quot;)
-# regression
+</code></pre>
+
+<pre class="prettyprint well"><code>## Loading required package: rpart
+</code></pre>
+
+<pre class="prettyprint well"><code>## Error: could not find function &quot;is&quot;
+</code></pre>
+
+<pre class="prettyprint well"><code class="r"># regression
 lrn = makeLearner(&quot;regr.rpart&quot;)
-# gradient boosting machine with hyperparameters and custon name
+</code></pre>
+
+<pre class="prettyprint well"><code>## Error: could not find function &quot;is&quot;
+</code></pre>
+
+<pre class="prettyprint well"><code class="r"># gradient boosting machine with hyperparameters and custon name
 lrn = makeLearner(&quot;regr.gbm&quot;, id = &quot;mygbm&quot;, n.trees = 500, interaction.depth = 3)
+</code></pre>
+
+<pre class="prettyprint well"><code>## Loading required package: gbm
+## Loading required package: survival
+## Loading required package: splines
+## Loading required package: lattice
+## Loading required package: parallel
+## Loaded gbm 2.1
+</code></pre>
+
+<pre class="prettyprint well"><code>## Error: could not find function &quot;is&quot;
 </code></pre>
 
 <p>The first argument specifies which algorithm to use.
@@ -245,32 +269,22 @@ what can be output during prediction, whether multi-class problems,
 observations weights or missing values are supported and so on.</p>
 <pre class="prettyprint well"><code class="r"># classifier, set it up for prediction probabilities
 lrn = makeLearner(&quot;classif.rpart&quot;, predict.type = &quot;prob&quot;, minsplit = 20)
-lrn
 </code></pre>
 
-<pre class="prettyprint well"><code>## Learner classif.rpart from package rpart
-## Type: classif
-## Class: classif.rpart
-## Properties: twoclass,multiclass,missings,numerics,factors,prob,weights
-## Predict-Type: prob
-## Hyperparameters: xval=0,minsplit=20
+<pre class="prettyprint well"><code>## Error: could not find function &quot;is&quot;
+</code></pre>
+
+<pre class="prettyprint well"><code class="r">lrn
+</code></pre>
+
+<pre class="prettyprint well"><code>## Error: object 'lrn' not found
 </code></pre>
 
 <pre class="prettyprint well"><code class="r"># display stored information for hyperparameters
 lrn$par.set
 </code></pre>
 
-<pre class="prettyprint well"><code>##                    Type len  Def   Constr Req Trafo
-## minsplit        integer   -   20 1 to Inf   -     -
-## minbucket       integer   -    - 1 to Inf   -     -
-## cp              numeric   - 0.01   0 to 1   -     -
-## maxcompete      integer   -    4 0 to Inf   -     -
-## maxsurrogate    integer   -    5 0 to Inf   -     -
-## usesurrogate   discrete   -    2    0,1,2   -     -
-## surrogatestyle discrete   -    0      0,1   -     -
-## maxdepth        integer   -   30  1 to 30   -     -
-## xval            integer   -   10 0 to Inf   -     -
-## parms           untyped   -    -        -   -     -
+<pre class="prettyprint well"><code>## Error: object 'lrn' not found
 </code></pre>
 
 </div>
